bug overflow

--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -32,6 +32,8 @@
     li{
         height: 10%;
         padding: 0;
+
+        overflow-y: auto;
     }
 
     a{
